# rexyDigest

./: .cursorignore  .gitignore  AGENT.md  AGENTS.md  CONTEXT.md  README.md  package-lock.json  package.json  prompt_weekly_gist.md  requirements.txt  test_weekly.md
Weekly_Gist/: Weekly_Gist_2025-10-18.md  (+46 more)
python/: pyproject.toml
python/rexy/: __init__.py  cli.py  domain.py  env_bootstrap.py  ingest.py
python/rexy/corpus/: __init__.py  items_store.py  payloads_store.py  runs_store.py  selections_store.py
python/rexy/generate/: __init__.py  config.py  deep_note_format.py  deep_note_picker.py  deep_notes.py  deep_picks.py  finalise.py  kol.py  novelty.py  pipeline.py  prefilter.py  prerank.py  renderer.py  summarise.py
python/rexy/generate/llm/: __init__.py  deep_note.py  deepseek.py  factory.py  fallback.py  gemini.py  gemini_common.py  item_analysis.py  memory.py
python/rexy/publish/: __init__.py  cli.py  parity.py  renderer.py
python/rexy/sources/: __init__.py  _registry.py  arxiv_adapter.py  rss_adapter.py  youtube_adapter.py  youtube_bootstrap.py
python/tests/: conftest.py  test_arxiv_adapter.py  test_bootstrap_youtube_script.py  test_deep_note_format.py  test_deep_note_picker.py  test_deep_notes.py  test_deepseek_analyser.py  test_domain.py  test_env_bootstrap.py  test_gemini_public_errors.py  test_generator_stages.py  test_ingestion.py  test_kol_bias.py  test_llm_factory.py  test_llm_fallback.py  test_publisher.py  test_publisher_polish.py  test_registry.py  test_rss_adapter.py  test_stores.py  test_youtube_adapter.py  test_youtube_bootstrap.py
(+64 files in other folders)
