[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rexy"
version = "0.1.0"
description = "Rexy Digest pipeline (Phase 1 ingestion onward)"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1.0",
    "feedparser>=6.0.10",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
rexy = "rexy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rexy*"]
